--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,5 @@
 # `REACT_APP` prefix is required to expose to client-side
 REACT_APP_VERCEL_ANALYTICS_ID=$VERCEL_ANALYTICS_ID
+
+REACT_APP_BACKEND_URL=http://localhost:8081
+API_PORT=8081
