--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,6 @@
 # `REACT_APP` prefix is required to expose to client-side
 REACT_APP_VERCEL_ANALYTICS_ID=$VERCEL_ANALYTICS_ID
 
-REACT_APP_BACKEND_URL=http://localhost:8081
+REACT_APP_BACKEND_URL=https://weathered-glitter-9529.fly.dev
 API_PORT=8081
+VITE_BACKEND_URL=https://weathered-glitter-9529.fly.dev
